iptables.txt
# Generated by iptables-save v1.8.7 on Fri Jun 16 12:41:44 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCPET [0:0]
:OUTPUT ACCPET [0:0]

# Lookback
-A INPUT -i lo -j ACCEPT
-A INPUT -i ens192 -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o ens192 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# SSH
-A INPUT -i ens192 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens161 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens161 -o ens192 -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens224 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens192 -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens256 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens192 -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens192 -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT

# RDP
-A INPUT -i ens192 -p tcp -m tcp --dport 3389 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens161 -p tcp -m tcp --dport 3389 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens161 -o ens192 -p tcp -m tcp --sport 3389 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens192 -p tcp -m tcp --sport 3389 -m state --state RELATED,ESTABLISHED -j ACCEPT

# DNS
-A INPUT -i ens192 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens161 -o ens192 -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens161 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens192 -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens224 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens192 -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens256 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens192 -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# DHCP
-A INPUT -i ens161 -p udp -m udp --dport 67 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens224 -p udp -m udp --sport 67 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# 192.168.10.X
-A INPUT -i ens224 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens192 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens224 -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens161 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens256 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens224 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# 192.168.20.X
-A INPUT -i ens256 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens192 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens256 -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens161 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens224 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens256 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# 192.168.30.X
-A INPUT -i ens161 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens161 -o ens192 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens161 -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens161 -o ens224 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens161 -o ens256 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens161 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

COMMIT
# Completed on Fri Jun 16 12:41:44 2023
# Generated by iptables-save v1.8.7 on Fri Jun 16 12:41:44 2023
*nat
:PREROUTING ACCEPT [39:4420]
:INPUT ACCEPT [7:2052]
:OUTPUT ACCEPT [4:304]
:POSTROUTING ACCEPT [1:84]
-A POSTROUTING -o ens192 -j MASQUERADE
-A PREROUTING -i ens192 -p tcp --dport 2222 -j DNAT --to-destination 192.168.10.1:22
-A PREROUTING -i ens192 -p tcp --dport 2223 -j DNAT --to-destination 192.168.10.2:22
-A PREROUTING -i ens192 -p tcp --dport 2224 -j DNAT --to-destination 192.168.20.1:22
-A PREROUTING -i ens192 -p tcp --dport 2225 -j DNAT --to-destination 192.168.30.1:22
-A PREROUTING -i ens192 -p tcp --dport 3389 -j DNAT --to-destination 192.168.30.1
COMMIT
# Completed on Fri Jun 16 12:41:44 2023
